Support Swagger-UI Oauth
#MUS-184 Resolved